// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Questionnaires should not render table whilst data is loading 1`] = `
<BaseLayout
  docTitle="Your Questionnaires"
  title="Your Questionnaires"
>
  <MainCanvas>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
    </QuestionnairesPage__StyledButtonGroup>
    <QuestionnairesPage__StyledCenteredPanel />
  </MainCanvas>
</BaseLayout>
`;

exports[`containers/Questionnaires should render a 'Create Questionnaire' button 1`] = `
<BaseLayout
  docTitle="Your Questionnaires"
  title="Your Questionnaires"
>
  <MainCanvas>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
    </QuestionnairesPage__StyledButtonGroup>
    <QuestionnairesPage__StyledCenteredPanel>
      <QuestionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={Array []}
      />
    </QuestionnairesPage__StyledCenteredPanel>
  </MainCanvas>
</BaseLayout>
`;

exports[`containers/Questionnaires should render when there are no questionnaires 1`] = `
<BaseLayout
  docTitle="Your Questionnaires"
  title="Your Questionnaires"
>
  <MainCanvas>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
    </QuestionnairesPage__StyledButtonGroup>
    <QuestionnairesPage__StyledCenteredPanel>
      <QuestionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={Array []}
      />
    </QuestionnairesPage__StyledCenteredPanel>
  </MainCanvas>
</BaseLayout>
`;

exports[`containers/Questionnaires should render when there are questionnaires 1`] = `
<BaseLayout
  docTitle="Your Questionnaires"
  title="Your Questionnaires"
>
  <MainCanvas>
    <QuestionnairesPage__StyledButtonGroup
      horizontal={true}
    >
      <withRouter(LB)
        id="btn-create-questionnaire"
        primary={true}
        to="/questionnaire/create"
      >
        Create
      </withRouter(LB)>
    </QuestionnairesPage__StyledButtonGroup>
    <QuestionnairesPage__StyledCenteredPanel>
      <QuestionnairesTable
        onDeleteQuestionnaire={[Function]}
        questionnaires={
          Array [
            Object {
              "actions": Object {
                "delete": true,
              },
              "comments": Object {
                "count": 0,
                "unread": false,
              },
              "createdAt": "01/01/1970",
              "id": "1",
              "sections": Array [
                Object {
                  "id": "5",
                  "pages": Array [
                    Object {
                      "id": "10",
                    },
                  ],
                },
              ],
              "theme": "default",
              "title": "Test questionnaire",
            },
          ]
        }
      />
    </QuestionnairesPage__StyledCenteredPanel>
  </MainCanvas>
</BaseLayout>
`;
